--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "nodemon --watch '*' -e ts,tsx --exec ts-node --project ./tsconfig.json ./index.ts"
   },
   "author": "",
   "license": "ISC",
@@ -12,12 +13,23 @@
     "axios": "^1.2.5",
     "cheerio": "^1.0.0-rc.12",
     "koa": "^2.14.1",
-    "koa-router": "^12.0.0",
-    "typescript": "^4.9.4"
+    "koa-router": "^12.0.0"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.31",
     "@types/koa": "^2.13.5",
-    "@types/koa-router": "^7.4.4"
+    "@types/koa-router": "^7.4.4",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "eslint": "^8.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard-with-typescript": "^33.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "nodemon": "^2.0.20",
+    "prettier": "^2.8.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
