--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^4.0.0",
     "axios": "^1.2.5",
     "cheerio": "^1.0.0-rc.12",
     "koa": "^2.14.1",
@@ -18,6 +19,7 @@
   "devDependencies": {
     "@types/cheerio": "^0.22.31",
     "@types/koa": "^2.13.5",
+    "@types/koa__cors": "^3.3.0",
     "@types/koa-router": "^7.4.4",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "eslint": "^8.32.0",
