--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "axios": "^1.2.5",
     "cheerio": "^1.0.0-rc.12",
     "koa": "^2.14.1",
-    "koa-router": "^12.0.0"
+    "koa-router": "^12.0.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.31",
     "@types/koa": "^2.13.5",
     "@types/koa__cors": "^3.3.0",
     "@types/koa-router": "^7.4.4",
+    "@types/lodash": "^4.14.191",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "eslint": "^8.32.0",
     "eslint-config-prettier": "^8.6.0",
