--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npm run build && node ./dist/index.js",
+    "build": "node_modules/typescript/bin/tsc --project ./tsconfig.json --outDir ./dist",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon --watch '*' -e ts,tsx --exec ts-node --project ./tsconfig.json ./index.ts"
   },
