--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/bodyparser": "^5.1.1",
     "@koa/cors": "^4.0.0",
     "axios": "^1.2.5",
     "cheerio": "^1.0.0-rc.12",
