--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cheerio": "^1.0.0-rc.12",
     "koa": "^2.14.1",
     "koa-router": "^12.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "playwright": "^1.55.1"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.31",
